--- a/style.css
+++ b/style.css
@@ -236,3 +236,22 @@ tbody tr:hover {
     width: 48%;
 }
 
+.button-container {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.add-btn {
+    text-decoration: none;
+    color: white;
+    background-color: #28a745; /* Vert */
+    padding: 10px 15px;
+    border-radius: 5px;
+    display: inline-block;
+    transition: background 0.3s ease;
+}
+
+.add-btn:hover {
+    background-color: #218838;
+}
+
