--- a/style.css
+++ b/style.css
@@ -255,3 +255,29 @@ tbody tr:hover {
     background-color: #218838;
 }
 
+img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
+.jouet-entry button {
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.jouet-entry button:hover {
+    background-color: darkred;
+}
+
+.form-container button {
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+
